Made embedded Google Slides responsive, made bold statement about responsiveness, and fixed aside spacing

--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,7 @@ textarea {
 
 /* ===== Initializr Styles ==================================================
    Author: Jonathan Verrecchia - verekia.com/initializr/responsive-template
+   Tweaked: Brian Liu
    ========================================================================== */
 
 body {
@@ -88,9 +89,9 @@ body {
     color: white;
 }
 */
-/* =================================
-    ALL: Material Blue/Orange Theme
-   ================================= */
+/* ========================================
+    ALL: Material Design Blue/Orange Theme
+   ======================================== */
 
 .header-container {
     border-bottom: 20px solid #1976D2;
@@ -147,7 +148,7 @@ nav ul {
 nav a {
     display: block;
     margin-bottom: 10px;
-    padding: 15px 0;
+    padding: 6px 0;
 
     text-align: center;
     text-decoration: none;
@@ -178,6 +179,10 @@ nav a:hover {
 .main aside {
     color: white;
     padding: 0px 5% 10px;
+}
+
+.main aside + aside {
+    margin-top: 30px;
 }
 
 .footer-container footer {
@@ -245,6 +250,26 @@ button[type=button] > a {
     line-height: 39px;
 }
 
+/* https://www.smashingmagazine.com/2014/02/making-embedded-content-work-in-responsive-design/ */
+
+.embed-container {
+    position: relative;
+    padding-top: 56.25%;
+    padding-bottom: 29px;
+    height: 0;
+    overflow: hidden;
+    margin-bottom: 30px;
+}
+
+.embed-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+/* Thanks, Smashing Mag */
 
 
 
